<resources>
    <string name="app_name">GezegenOS</string>
    <string name="et_baslik">Hangi Gezegende Kaç Kİlosun?</string>
    <string name="pt_input">Dünyadaki Ağırlığını Gir:</string>
    <string name="btn_hesapla">Hesapla</string>
    <string name="input_hint">Dünyadaki Ağırlığını Gir:</string>
    <string name="btn_sonuc">SONUÇ</string>
    <string name="ven_s">Venüs</string>
    <string name="merk_r">Merkür</string>
    <string name="d_nya">Dünya</string>
    <string name="mars">Mars</string>
    <string name="sat_rn">Satürn</string>
    <string name="uran_s">Uranüs</string>
    <string name="pl_ton">Plüton</string>
    <string name="j_piter">Jüpiter</string>
    <string name="nept_n">Neptün</string>
    <string name="pic">TODO</string>
    <string name="d_nyadaki_a_rl_n">Dünyadaki Ağırlığın:</string>
    <string name="gezegenos_g_r">GEZEGENOS GİRİŞ</string>
    <string name="todo">TODO</string>
</resources>