<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/cBuranus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#9C27B0"
        android:fontFamily="@font/autour_one"
        android:text="@string/uran_s"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/cBneptun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cBmars" />

    <CheckBox
        android:id="@+id/cBpluto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#9C27B0"
        android:fontFamily="@font/autour_one"
        android:text="@string/pl_ton"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/cBneptun"
        app:layout_constraintTop_toBottomOf="@+id/cBsaturn" />

    <CheckBox
        android:id="@+id/cBjupiter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#9C27B0"
        android:fontFamily="@font/autour_one"
        android:text="@string/j_piter"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/cBsaturn"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toEndOf="@+id/cBmercury"
        app:layout_constraintTop_toBottomOf="@+id/cBvenus2" />

    <CheckBox
        android:id="@+id/cBmars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#9C27B0"
        android:fontFamily="@font/autour_one"
        android:text="@string/mars"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/cBneptun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cBmercury" />

    <CheckBox
        android:id="@+id/cBearth2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#9C27B0"
        android:fontFamily="@font/autour_one"
        android:text="@string/d_nya"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cBneptun"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading" />

    <CheckBox
        android:id="@+id/cBvenus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#9C27B0"
        android:fontFamily="@font/autour_one"
        android:text="@string/ven_s"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/cBsaturn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cBmercury"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading" />

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/et_baslik"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ptInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/autour_one"
        android:hint="@string/input_hint"
        android:inputType="textPersonName|numberDecimal"
        android:textColor="#9C27B0"
        android:textColorHint="#9C27B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading" />

    <TextView
        android:id="@+id/tvSonuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/btn_sonuc"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptInput" />

    <CheckBox
        android:id="@+id/cBmercury"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#9C27B0"
        android:fontFamily="@font/autour_one"
        android:text="@string/merk_r"
        android:textColorHighlight="#9C27B0"
        android:textColorLink="#9C27B0"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/cBneptun"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading" />

    <CheckBox
        android:id="@+id/cBneptun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#9C27B0"
        android:fontFamily="@font/autour_one"
        android:text="@string/nept_n"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/cBsaturn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cBmercury"
        app:layout_constraintTop_toBottomOf="@+id/cBjupiter2" />

    <CheckBox
        android:id="@+id/cBsaturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#9C27B0"
        android:fontFamily="@font/autour_one"
        android:text="@string/sat_rn"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cBneptun"
        app:layout_constraintTop_toBottomOf="@+id/cBearth2" />

</androidx.constraintlayout.widget.ConstraintLayout>